Attempt 1 to fix phone number card on iPhone 7 Plus

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -779,4 +779,8 @@ h3 {
         text-align: center;
         width: 30%;
     }
+
+    .step_2 {
+        width: 90%;
+    }
 }
